# ph_concepts

./: CMakeLists.txt  test_start.cp
docs_doxygen/: Doxyfile.in
include/asm_mac/: platform.asm
include/ph_concepts/: Arithmetic.hpp  Array.hpp  Bool.hpp  Char.hpp  Floating.hpp  Function.hpp  Fundamental.hpp  Integer.hpp  Integral.hpp  Number.hpp  Pointer.hpp  Range.hpp  Reference.hpp  Signed.hpp  Size.hpp  String.hpp  StringHelper.hpp  Type.hpp  Unsigned.hpp  Void.hpp  algorithm.hpp  common.hpp  concepts.hpp  data_structure.hpp  experimenting.hpp  iterator.hpp  memory.hpp  platform.asm  platform.hpp  start.hpp  typeinfo.hpp  types.hpp  typetraits.hpp  uni.hpp  vari.hpp  variant.hpp
src/: CMakeLists.txt  Range.cpp  String.cpp  StringHelper.cpp  algorithm.cpp  concepts.cpp  iterator.cpp  module.cpp  start.cpp  typetraits.cpp  variant.cpp
src/in/: platform.hpp
tests/: CMakeLists.txt  test_ph_concepts.cpp
tests/src/: CMakeLists.txt  test_Arithmetic.cpp  test_Bool.cpp  test_Integer.cpp  test_String.cpp  test_concepts.cpp  test_start.cpp  test_uni.cpp  test_vari.cpp  testlib.cpp
